# sip_server

./: Cargo.toml  README.md  message_flow.md
src/: __main.rs  _main.rs  client.rs  client_event.rs  client_event_handler.rs  client_factory.rs  client_handler.rs  client_handler_factory.rs  client_handler_mgr.rs  client_manager.rs  client_worker.rs  lib.rs  main.rs  message_router.rs  msg_router.rs  my_client.rs  my_client_handler.rs  my_client_handler_mgr.rs  my_client_manager.rs  my_system.rs  server.rs  sip_parse.rs  system.rs  udp_client_event_handler.rs  utils.rs  via_branch_generator.rs
src/_bin/: client.rs
src/components/: dialog_gen.rs  dialogs.rs  mod.rs  registrations.rs
src/tcp_server/: mod.rs  msg_read.rs  tcp_client_event_handler.rs  tcp_stream_reader.rs  tcp_stream_waiting_worker.rs  tcp_stream_worker.rs
src/udp_server/: mod.rs  udp_client_event_handler.rs  udp_socket_reader.rs  udp_socket_writer.rs
