[package]
name = "sip_server"
version = "0.1.0"
authors = ["kalita_alexey"]
edition = "2018"

[dependencies]
async-std = "1.6.2"
async-trait = "0.1.36"
futures = "0.3.5"
libsip = { path = "libsip" }
env_logger = "0.7.1"
log = "0.4.8"
nom = "6.0.0-alpha1"

[profile.release]
lto = true
panic = "abort"